# tasks

./: .commitlint.yaml  .gitignore  .pre-commit-config.yaml  AI_SPEC.md  AI_SPEC_SHORT.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  README_PT.md  pyproject.toml  pytest.ini
.github/workflows/: publish-readme-pages.yml  python-package.yml
.zed/: settings.json
src/tasks/: __init__.py  __main__.py
src/tasks/config/: config.py
src/tasks/consts/: __init__.py
src/tasks/git/: __init__.py  git_config.py
src/tasks/service/: logging_service.py  task_service.py
src/tasks/task/: task.py
src/tasks/tui/: app.py  args.py  choose_repository_modal.py  choose_repository_modal.tcss  context.py  logs_screen.py  logs_screen.tcss  main.tcss  new_task_2_screen.py  new_task_2_screen.tcss  new_task_screen.py  new_task_screen.tcss  settings_screen.py  tasks_screen.datatable.py  tasks_screen.datatable.tcss  tasks_screen.py  tasks_screen.tcss
tests/config/: test_config.py
tests/git/: test_config.py
tests/service/: test_logging_service.py  test_task_service.py
