[project]
name = "tasks"
version = "0.1.8"
description = "Textual TUI for Git-based task workspaces with create, move, and archive workflows."
authors = [{ name = "Guionardo Furlan", email = "guionardo@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "textual[syntax]>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["**/*.tcss", "**/*.py"]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]

[project.scripts]
tasks = "tasks.__main__:main"

[project.urls]
Homepage = "https://github.com/guionardo/tasks"
Issues = "https://github.com/guionardo/tasks/issues"
Repository = "https://github.com/guionardo/tasks"
